# ini-cpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  build.sh  doxygen.ini  example.cpp  linter.sh
.github/workflows/: c-cpp.yml
doc/: annotated.html  classes.html  classinih_1_1INIReader.html  config.ini  dir_63772b626f2709090f0bdca0f40827b4.html  dir_7f7e439ba0927089503219129b4cf038.html  graph_legend.html  namespaces.html
doc/html/: classinih_1_1INIReader-members.html  classinih_1_1INIWriter.html  dir_10cf7d68c9c2c6983eace54af6889bfe.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_cf779efadf30e9c7d82da7dbe2eb33f7.html  files.html  functions.html  functions_func.html  ini_8h_source.html  md_README.html  menudata.js  namespaceinih.html  pages.html
doc/html/search/: all_4.js  classes_0.js  functions_0.js  functions_1.js  searchdata.js
doc/search/: all_2.js  namespaces_0.js
docs/: annotated.html  classes.html  classinih_1_1INIReader-members.html  classinih_1_1INIReader.html  classinih_1_1INIWriter-members.html  classinih_1_1INIWriter.html  config.ini  dir_10cf7d68c9c2c6983eace54af6889bfe.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5280bb524ed5294135fd93e0b12dbd44.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  ini_8h_source.html  menudata.js  namespaceinih.html  namespaces.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_0.js  searchdata.js
ini/: INIReader.h  ini.h
test/: CMakeLists.txt  tests.cpp
test/fixtures/: bad_file.ini  bigfile.ini  config.ini  duplicate_keys.ini
